school - add rollcall

--- a/school/change_pw.html
+++ b/school/change_pw.html
@@ -24,7 +24,7 @@
     <main class="login-wrap">
         <div class="top-breadcrumb">
             <div class="mid-cont">
-                <a class="icon icon-back" href="#"></a>
+                <a class="icon icon-back" href="setting.html"></a>
                 <div class="top-text-wrap">
                     <h3 class="main-title">修改密碼</h3>
                 </div>
