school - add transcripts

--- a/school/myclass.html
+++ b/school/myclass.html
@@ -44,7 +44,7 @@
                 <a class="icon icon-myclass-add popup-link" href="#popup-myclass-add"></a>
             </div>
         </div>
-        <div class="mid-content">
+        <div class="mid-content pa-b-75">
 
             <!-- 最近的 + first -->
             <div class="a-card first">
@@ -70,20 +70,20 @@
                             <a class="icon icon-class" href="myclass_rollcall.html">點名</a>
                         </li>
                         <li class="bg-yello">
-                            <a class="icon icon-check" href="#">結案</a>
+                            <a class="icon icon-check" href="myclass_closeout.html">結案</a>
                         </li>
                         <li>
-                            <a class="icon icon-feed" href="#">近況</a>
+                            <a class="icon icon-feed" href="myclass_feed.html">近況</a>
                         </li>
                         <li>
-                            <a class="icon icon-score" href="#">成績</a>
+                            <a class="icon icon-score" href="myclass_transcripts.html">成績</a>
                         </li>
                     </ul>
                     
                 </div>
             </div>
 
-            <!-- 第二個 + second -->
+            <!-- 第二個 + second -->    
             <div class="a-card second">
                 <div class="class-info">
                     <p class="date">今日 12:30 pm - 01:30 pm</p>
