--- a/school/otherclass_rollcall.html
+++ b/school/otherclass_rollcall.html
@@ -51,20 +51,21 @@
                 <input class="default" type="text" placeholder="搜尋同學名字" value="">
             </div>
             <ul class="class-list">
-                <li>
-                    <p>愛比蓋爾</p>
+                <!-- icon-star fixed 在最一開始的學生 -->
+                <li class="icon-star">
+                    <p>瑞秋姑娘</p>
+                </li>
+                <li class="icon-star">
+                    <p>希爾德</p>
+                </li>
+                <li class="icon-star">
+                    <p>迷佛列</p>
                 </li>
                 <li>
-                    <p>宜蓁</p>
+                    <p>cocococ</p>
                 </li>
                 <li>
-                    <p>Adelaide</p>
-                </li>
-                <li>
-                    <p>Louis</p>
-                </li>
-                <li>
-                    <p>Jade</p>
+                    <p>tinaaaa</p>
                 </li>
                 <li>
                     <p>宜蓁</p>
@@ -101,26 +102,6 @@
                 </li>
             </ul>
         </div>
-        <nav class="bottom-tools">
-            <ul>
-                <li>
-                    <a class="icon-feed" href="feed.html"><span class="nb">5</span>學生近況</a>
-                </li>
-                <!-- 選到 li + btn-in -->
-                <li class="btn-in">
-                    <a class="icon-otherclass" href="otherclass.html">輔導課</a>
-                </li>
-                <li>
-                    <a class="icon-myclass" href="myclass.html">一般上課</a>
-                </li>
-                <li>
-                    <a class="icon-class" href="class.html">我的班級</a>
-                </li>
-                <li>
-                    <a class="icon-setting" href="setting.html">設定</a>
-                </li>
-            </ul>
-        </nav>
     </main>
 </body>
 </html>
