--- a/school/otherclass.html
+++ b/school/otherclass.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div>
-        <div class="mid-content">
+        <div class="mid-content pa-b-75">
 
             <!-- 最近的 + first -->
             <div class="a-card first">
