school - add feed & homework

--- a/school/otherclass.html
+++ b/school/otherclass.html
@@ -80,10 +80,10 @@
                             <a class="f-s-l" href="otherclass_rollcall.html">上課點名</a>
                         </li>
                         <li>
-                            <a class="icon icon-feed" href="#">近況</a>
+                            <a class="icon icon-feed" href="otherclass_feed.html">近況</a>
                         </li>
                         <li>
-                            <a class="icon icon-myclass" href="#">作業</a>
+                            <a class="icon icon-myclass" href="otherclass_homework.html">作業</a>
                         </li>
                     </ul>
                     
