--- a/school/otherclass_rollcall_check.html
+++ b/school/otherclass_rollcall_check.html
@@ -50,8 +50,9 @@
                 <div class="icon-search"></div>
                 <input class="default" type="text" placeholder="搜尋同學名字" value="">
             </div>
+            <!-- 已點名 要 + icon-return -->
             <ul class="class-list icon-return">
-                <li>
+                <li class="icon-star">
                     <p>馬克</p>
                 </li>
                 <li>
