--- a/school/setting.html
+++ b/school/setting.html
@@ -32,6 +32,10 @@
         <div class="mid-content">
             <p class="top-text">帳號</p>
             <div class="user-photo" style="background-image:url(images/img_00002.png);"></div>
+            <!-- 文字版 -->
+            <!-- <div class="user-photo">
+                <span>貝</span>
+            </div> -->
             <p class="user-name">Kelly Chang</p>
             <div class="btn">
                 <a class="btn-primary-xl" href="change_pw.html">
