--- a/school/otherclass_homework.html
+++ b/school/otherclass_homework.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>鄭賦文理教室 一般上課 - 上課點名</title>
+    <title>鄭賦文理教室 輔導課 - 交作業</title>
     <meta name='description' content="" />
     <meta name='keywords' content="" />
     <meta name="MobileOptimized" content="width">
@@ -24,9 +24,9 @@
     <main class="main-wrap">
         <div class="top-breadcrumb">
             <div class="mid-cont">
-                <a class="icon icon-back" href="myclass.html"></a>
+                <a class="icon icon-back" href="otherclass.html"></a>
                 <div class="top-text-wrap">
-                    <h3 class="main-title">上課點名：國語小三 2024</h3>
+                    <h3 class="main-title">交作業</h3>
                     <p class="date">2024/01/12 10:30 am - 11:30 am</p>
                 </div>
                 <!-- 這個不能刪哦 -->
@@ -34,13 +34,13 @@
                 <div class="icon"></div>
             </div>
             <div class="class-status">
-                <p class="student-nb">應到人數 <span>28</span></p>
+                <p class="student-nb">學生人數 <span>56</span></p>
                 <div class="btn">
-                    <a class="btn-primary-xl btn-bg-w" href="myclass_rollcall.html">
-                        <span class="">未點名(8)</span>
+                    <a class="btn-primary-xl" href="otherclass_homework.html">
+                        <span class="">未繳交(38)</span>
                     </a>
-                    <a class="btn-primary-xl" href="myclass_rollcall_check.html">
-                        <span class="">已點名(20)</span>
+                    <a class="btn-primary-xl btn-bg-w" href="otherclass_homework_check.html">
+                        <span class="">已繳交(18)</span>
                     </a>
                 </div>
             </div>
@@ -50,31 +50,22 @@
                 <div class="icon-search"></div>
                 <input class="default" type="text" placeholder="搜尋同學名字" value="">
             </div>
-            <!-- 已點名 要 + icon-return -->
-            <ul class="class-list icon-return">
+            <ul class="class-list">
+                <!-- icon-star fixed 在最一開始的學生 -->
                 <li class="icon-star">
-                    <p>馬克</p>
+                    <p>傑西卡</p>
                 </li>
                 <li>
-                    <p>Eikiy Chang</p>
+                    <p>安潔莉娜</p>
                 </li>
                 <li>
-                    <p>Andy</p>
-                </li>
-                <li>
-                    <p>Jade</p>
-                </li>
-                <li>
-                    <p>Jade</p>
-                </li>
-                <li>
-                    <p>AAAAA</p>
+                    <p>布萊德</p>
                 </li>
                 <li>
                     <p>可欣</p>
                 </li>
                 <li>
-                    <p>Louis</p>
+                    <p>子晴</p>
                 </li>
                 <li>
                     <p>愛比蓋爾</p>
