school - add login link

--- a/school/login.html
+++ b/school/login.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="btn">
                     <!-- 未填寫不給點選按鈕 + btn-disabled -->
-                    <a class="btn-primary-xl btn-disabled" href="#">
+                    <a class="btn-primary-xl btn-disabled" href="myclass.html">
                         <span class="">登入</span>
                     </a>
                 </div>
