--- a/CRM/order.html
+++ b/CRM/order.html
@@ -1721,27 +1721,32 @@
                             <ul class="order-step-list">
                                 <li class="on">
                                     <div class="icon icon-a">
-                                        <p>委刊單建立</p>
+                                        <p>委刊單<br>建立</p>
                                     </div>             
                                 </li>
                                 <li>
                                     <div class="icon icon-b">
-                                        <p>小組長審核</p>
+                                        <p>經辦主管<br>審核</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="icon icon-c">
-                                        <p>Planner 審核</p>
-                                    </div>                                   
-                                </li>
-                                <li>
-                                    <div class="icon icon-d">
-                                        <p>VP 審核</p>
+                                        <p>責任主管<br>審核</p>
                                     </div>
                                 </li>
                                 <li>
+                                    <div class="icon icon-d">
+                                        <p>Planner<br>審核</p>
+                                    </div>                                   
+                                </li>
+                                <li>
                                     <div class="icon icon-e">
-                                        <p>審核完成</p>
+                                        <p>VP<br>審核</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon icon-f">
+                                        <p>審核<br>完成</p>
                                     </div>
                                 </li>
                             </ul>
@@ -1756,27 +1761,32 @@
                             <ul class="order-step-list">
                                 <li>
                                     <div class="icon icon-a">
-                                        <p>委刊單建立</p>
+                                        <p>委刊單<br>建立</p>
                                     </div>
                                 </li>
                                 <li class="on">
                                     <div class="icon icon-b">
-                                        <p>小組長審核</p>
-                                    </div>
-                                </li>
-                               <li class="on">
-                                    <div class="icon icon-c">
-                                        <p>Planner 審核</p>
+                                        <p>經辦主管<br>審核</p>
                                     </div>
                                 </li>
                                 <li class="on">
+                                    <div class="icon icon-c">
+                                        <p>責任主管<br>審核</p>
+                                    </div>
+                                </li>
+                               <li class="on">
                                     <div class="icon icon-d">
-                                        <p>VP 審核</p>
+                                        <p>Planner<br>審核</p>
                                     </div>
                                 </li>
                                 <li class="on">
                                     <div class="icon icon-e">
-                                        <p>審核完成</p>
+                                        <p>VP<br>審核</p>
+                                    </div>
+                                </li>
+                                <li class="on">
+                                    <div class="icon icon-f">
+                                        <p>審核<br>完成</p>
                                     </div>
                                 </li>
                             </ul>
@@ -1792,27 +1802,32 @@
                             <ul class="order-step-list">
                                 <li>
                                     <div class="icon icon-a">
-                                        <p>委刊單建立</p>
+                                        <p>委刊單<br>建立</p>
                                     </div>
                                 </li>
                                 <li class="no">
                                     <a class="icon icon-b popup-link" href="#popup-order-review-note">
-                                        <p>小組長拒絕</p>
+                                        <p>責任主管<br>拒絕</p>
                                     </a>
                                 </li>
                                 <li class="no">
-                                    <a class="icon icon-b popup-link" href="#popup-order-review-note">
-                                        <p>Planner 拒絕</p>
+                                    <a class="icon icon-c popup-link" href="#popup-order-review-note">
+                                        <p>經辦主管<br>拒絕</p>
                                     </a>
                                 </li>
                                 <li class="no">
-                                    <a class="icon icon-b popup-link" href="#popup-order-review-note">
-                                        <p>VP 拒絕</p>
+                                    <a class="icon icon-d popup-link" href="#popup-order-review-note">
+                                        <p>Planner<br>拒絕</p>
+                                    </a>
+                                </li>
+                                <li class="no">
+                                    <a class="icon icon-e popup-link" href="#popup-order-review-note">
+                                        <p>VP<br>拒絕</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <div class="icon icon-e">
-                                        <p>審核完成</p>
+                                    <div class="icon icon-f">
+                                        <p>審核<br>完成</p>
                                     </div>
                                 </li>
                             </ul>
