--- a/CRM/order.html
+++ b/CRM/order.html
@@ -220,6 +220,9 @@
                         <div class="order-day click-sort">
                             <p>用印完成<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
                         </div>
+                        <div class="order-nb click-sort">
+                            <p>合約編號<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                        </div>
                         <p class="order-owner click-sort">所有者<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
                     </div>
                     <div class="card clearfix">
@@ -243,6 +246,9 @@
                             </div>
                             <div class="order-day">
                                 <p></p>
+                            </div>
+                            <div class="order-nb">
+                                <p>1110000006134</p>
                             </div>
                             <p class="order-owner">Sandy yu</p>
                         </a>
@@ -296,6 +302,9 @@
                             <div class="order-day">
                                 <p>2021/08/14</p>
                             </div>
+                            <div class="order-nb">
+                                <p>1110000006134</p>
+                            </div>
                             <p class="order-owner">Jeff hohoho</p>
                         </a>
                        <ul class="edit-tool">
@@ -348,6 +357,9 @@
                             <div class="order-day">
                                 <p></p>
                             </div>
+                            <div class="order-nb">
+                                <p>1110000006134</p>
+                            </div>
                             <p class="order-owner">Eikiy</p>
                         </a>
                         <ul class="edit-tool">
@@ -392,6 +404,9 @@
                             </div>
                             <div class="order-day">
                                 <p>2022/4/31</p>
+                            </div>
+                            <div class="order-nb">
+                                <p>1110000006134</p>
                             </div>
                             <p class="order-owner">Eikiy</p>
                         </a>
@@ -440,6 +455,9 @@
                             </div>
                             <div class="order-day">
                                 <p></p>
+                            </div>
+                            <div class="order-nb">
+                                <p>1110000006134</p>
                             </div>
                             <p class="order-owner">Ooookide</p>
                         </a>
